# news-intel

./: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
api/: groq.ts  openai.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AnalyticsPanel.tsx  ArticleCard.tsx  ArticleList.tsx  ArticleModal.tsx  ArticleReader.tsx  AskBar.tsx  ChatPanel.tsx  DailyBriefing.tsx  Dock.tsx  Header.tsx  SettingsPanel.tsx  TopPicks.tsx  VoiceButton.tsx  index.ts
src/components/Layout/: CategorySidebar.tsx  IconRail.tsx  MainContent.tsx  RightPanel.tsx  index.ts
src/services/: articleFetcher.ts  behaviorAgent.ts  briefing.ts  groq.ts  memoryAgent.ts  newsFetcher.ts  openai.ts  trends.ts  vectorStore.ts  voice.ts  webSearch.ts
src/store/: index.ts
src/types/: index.ts
