[package]
name = "news-intel"
version = "0.1.0"
description = "News Intelligence App"
authors = ["Sinan Agency"]
edition = "2021"

[lib]
name = "news_intel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
